// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileEntry render tests should render default state ESCO_SKILL_GROUPS -> Skill Groups 1`] = `
<div
  data-filetype="ESCO_SKILL_GROUPS"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="ESCO_SKILL_GROUPS"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="ESCO_SKILL_GROUPS"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Skill Groups csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Skill Groups
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state ESCO_SKILL_HIERARCHY -> Skill Hierarchy 1`] = `
<div
  data-filetype="ESCO_SKILL_HIERARCHY"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="ESCO_SKILL_HIERARCHY"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="ESCO_SKILL_HIERARCHY"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Skill Hierarchy csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Skill Hierarchy
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state ESCO_SKILL_SKILL_RELATIONS -> Skill-To-Skill Relations 1`] = `
<div
  data-filetype="ESCO_SKILL_SKILL_RELATIONS"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="ESCO_SKILL_SKILL_RELATIONS"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="ESCO_SKILL_SKILL_RELATIONS"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Skill-To-Skill Relations csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Skill-To-Skill Relations
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state ESCO_SKILLS -> Skills 1`] = `
<div
  data-filetype="ESCO_SKILLS"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="ESCO_SKILLS"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="ESCO_SKILLS"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Skills csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Skills
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state ISCO_GROUPS -> ISCO Groups 1`] = `
<div
  data-filetype="ISCO_GROUPS"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="ISCO_GROUPS"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="ISCO_GROUPS"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add ISCO Groups csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        ISCO Groups
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state OCCUPATION_HIERARCHY -> Occupation Hierarchy 1`] = `
<div
  data-filetype="OCCUPATION_HIERARCHY"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="OCCUPATION_HIERARCHY"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="OCCUPATION_HIERARCHY"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Occupation Hierarchy csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Occupation Hierarchy
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state OCCUPATION_SKILL_RELATIONS -> Occupation-To-Skill Relations 1`] = `
<div
  data-filetype="OCCUPATION_SKILL_RELATIONS"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="OCCUPATION_SKILL_RELATIONS"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="OCCUPATION_SKILL_RELATIONS"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Occupation-To-Skill Relations csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Occupation-To-Skill Relations
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FileEntry render tests should render default state OCCUPATIONS -> Occupations 1`] = `
<div
  data-filetype="OCCUPATIONS"
  data-testid="file-entry-d2bc4d5d-7760-450d-bac6-a8857affeb89"
>
  <div>
    <input
      accept=".csv"
      data-filetype="OCCUPATIONS"
      data-testid="file-input-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      id="OCCUPATIONS"
      style="display: none;"
      type="file"
    />
    <div
      aria-label="Add Occupations csv file"
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-d8rrhm-MuiButtonBase-root-MuiChip-root"
      data-testid="select-file-button-d2bc4d5d-7760-450d-bac6-a8857affeb89"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary css-etbowg-MuiSvgIcon-root"
        data-testid="AddCircleOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        Occupations
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;
